2013-06-03  Carsten Haitzler (The Rasterman)

        * Fix edje min size calc to propagate min size calcs to GROUP
        items swallowed in automatically.

2013-05-31  Carsten Haitzler (The Rasterman)

        * Fix ascent/descent in textblock when fontsets are used to be
        superset of all ascent/descents.

2013-05-31  ChunEon Park (Hermet)

        * Edje: support edc proxy.source_visible, proxy.source_clip

2013-05-31  Jérémy Zurcher

        * Added --enable-image-loader-xyz=yes|static|auto|no for all loaders
        * compilation fail if not found and option set to yes or static

2013-05-29  Carsten Haitzler (The Rasterman)

        * Fix evas gl partial swap to keep full re-render rects if
        switching mode automatically.

2013-05-29  Mike Blumenkrantz

        * Added eina_str_convert_len() to work around broken eina_str_convert()
        * Add ecore-x(cb) support for text/x-moz-url DND operations

2013-05-28  ChunEon Park (Hermet)

        * Fix textblock to render pre again if it needs to relayouting.

2013-05-27  Jihoon Kim (jihoon)

        * Add ECORE_IMF_INPUT_PANEL_LAYOUT_DATETIME layout
        * Add EDJE_INPUT_PANEL_LAYOUT_DATETIME layout

2013-05-24  Daniel Willmann

        * Fix srv->start_time (initialization missing). So now 
          ecore_con_server_uptime_get() is working for plain TCP connections.

2013-05-24  Guillaume Friloux

        * Fix use of ecore_con_server_client_limit_set() (counter never
          decreased).
        * Fix use of ecore_con_client_timeout_set() and
          ecore_con_server_timeout_set() that makes timeout on connections
          even if you sent data.
        * Fix cl->start_time (initialization missing). So now 
          ecore_con_client_uptime_get() is working.

2013-05-22  David Seikel (onefang)

	* Edje Lua: Stop leaking evas objects in Lua.

2013-05-22  Daniel Juyung Seo (SeoZ)

        * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
